--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
       rel="stylesheet"
       href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
+    />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
